"Static-videos" remove old charts and fix json

--- a/charts/static-videos/2023.12.7/questions.yaml
+++ b/charts/static-videos/2023.12.7/questions.yaml
@@ -88,7 +88,7 @@ questions:
                   type: path
                   hidden: true
                   editable: false
-                  default: "/data"
+                  default: "/video"
               - variable: hostPathEnabled
                 label: "Enable Host Path for the app Data Volume"
                 schema:
