Update broken question

--- a/charts/ffmpeg-worker/2024.01.1/questions.yaml
+++ b/charts/ffmpeg-worker/2024.01.1/questions.yaml
@@ -41,10 +41,10 @@ questions:
       type: string
 
   - variable: lengthOfSegment
-    label: "Length of video segments (s)"
+    label: "Length of video segments (integer seconds)"
     group: "Configuration"
     schema:
-      type: integer
+      type: string
 
   - variable: environmentVariables
     label: "Environment Variables for FFmpeg worker Server"
