--- a/charts/ffmpeg-worker/app_versions.json
+++ b/charts/ffmpeg-worker/app_versions.json
@@ -188,10 +188,10 @@
         },
         {
           "variable": "lengthOfSegment",
-          "label": "Length of video segments (s)",
+          "label": "Length of video segments (integer seconds)",
           "group": "Configuration",
           "schema": {
-            "type": "integer"
+            "type": "string"
           }
         },
         {
